// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeLink defaults to normal link if to prop is an external link 1`] = `
<div>
  <a
    href="https://example.com"
  >
    External link
  </a>
</div>
`;

exports[`SafeLink defaults to normal link if to prop is an old ndla link 1`] = `
<div>
  <a
    href="/nb/node/54"
  >
    Normal link
  </a>
</div>
`;

exports[`SafeLink renderers Link correctly if router context is present 1`] = `
<div>
  <a
    href="/my/path"
    tabindex="0"
  >
    Internal link
  </a>
</div>
`;

exports[`SafeLink renderers normal link correctly when router context is not present 1`] = `
<div>
  <a
    href="/my/path"
  >
    No router context
  </a>
</div>
`;

exports[`SafeLink renderers normal mailto-link correctly 1`] = `
<div>
  <a
    href="mailto:test@ndla.no"
  >
    test@ndla.no
  </a>
</div>
`;
